# OpsIntelligence

./: .gitignore  .opsintelligence.yaml.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OPSINTELLIGENCE.md  README.md  get_logs.sh  go.mod  go.sum  install.ps1  install.sh  package.json  test_wa.sh  tsconfig.json  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: adapter-contract-tests.yml  ci.yml  load-test-smoke.yml  release.yml  update-doctor-snapshot.yml
cmd/opsintelligence/: admin_cmd.go  cron_cmd.go  daemon.go  daemon_unix.go  daemon_windows.go  datastore_cmd.go  dlq_cmd.go  doctor_channel.go  doctor_channel_test.go  doctor_cmd.go  doctor_devops.go  doctor_json_test.go  doctor_sanitize_test.go  doctor_text_snapshot_test.go  gateway_auth.go  guides_cmd.go  local_intel_cmd.go  local_intel_cmd_test.go  localgemma.go  localgemma_stub.go  logic_test_cmd.go  main.go  main_test.go  mcp_cmd.go  mempalace_cmd.go  onboard.go  onboard_merge.go  onboard_merge_test.go  preflight.go  preflight_test.go  prompts_cmd.go  security_cmd.go  service.go  service_darwin.go  service_linux.go  service_windows.go  skills_cmd.go  skills_configure.go
doc/: configsvc.md  enterprise-binary-server.md  github-webhooks.md  master_guide.md  smart-prompts.md  supervised-subagents.md  users-apikeys-api.md  webhook-adapters.md
doc/Sprints/: future-updates-and-releases.md
doc/architecture/: channel-adapter-v1.md
doc/channels/: capability-registry.md  discord-setup.md  telegram-setup.md
doc/deep-dives/: context-engineering.md  execution-loop.md  providers-and-routing.md  skill-graphs.md  skills-and-tools.md
doc/observability/: grafana-sprint-02-channel-golden-signals.json  internal-slo-error-budgets.md  load-test-baseline.md  mempalace-routing-baseline.md
doc/runbooks/: README.md  dlq-inspection.md  doctor-config-validation.md  doctor-json-schema.md  load-test-and-failure-injection.md  memory-mining.md  mempalace-rollout-rollback.md  metrics-slo-indicators.md  on-call-dashboards-alerts.md  opentelemetry-tracing.md  structured-logging-correlation-ids.md  ttfm-measurement.md
internal/agent/: runner.go  runner_auto.go  runner_localintel.go  runner_localintel_routing.go  runner_localintel_routing_test.go  runner_stream_resilience.go  runner_stream_resilience_test.go  runner_xml_tools_test.go  tool_name_resolve.go  tool_name_resolve_test.go
internal/auth/: apikeys.go  apikeys_test.go  middleware.go  middleware_test.go  passwords.go  passwords_test.go  principal.go  principal_test.go  sessions.go
internal/automation/: gmail.go
internal/autotool/: autotool.go
internal/channels/: buffer.go  channel.go  channel_test.go  inbound.go  inbound_test.go
internal/config/: config.go  doctor_load.go  doctor_load_test.go  init.go  init_test.go  mempalace_bootstrap_test.go  (+1 more)
release/: gemma-4-e2b-it-MIRROR_MANIFEST.txt
scripts/: build_arm64.sh  ci-fresh-install.sh  setup_voice.py  voice_server.py
sensing/: CMakeLists.txt
sensing/audio/: audio_stream.cpp
sensing/camera/: camera_capture.cpp
skills/: marketplace.json
src/: entry.ts  index.ts
(+356 files in other folders)
